--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=80
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/java_33_34_chatApp?serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.password=JAVA_33_34
+spring.datasource.username=JAVA_33_34
 
+
+chatApp.siteTitle=SomeChatApp
